<resources>
    <string name="app_name">TD3 lancer de de</string>
    <string name="exercice_1">Exercice 1</string>
    <string name="exercice_2">Exercice 2</string>
    <string name="exercice_3">Exercice 3</string>
    <string name="r_sultat">Résultat</string>
    <string name="lancer_le_de">LANCER LE DE</string>
    <string name="r_sultat_1">Dé 1</string>
    <string name="r_sultat_2">Dé 2</string>
    <string name="nombre_de_face">Nombre de face</string>
</resources>